2010-12-26
Worked on Music Downloader script
Fixed up some session features
    Abstracted to new_session() for users.inc module and cli module to use
Started settings.php.dist-gen script to generate all possible settings and their default values
	Just needs some fancy handlers for different options such as text numbers or enums
Added a files_exist_regexp() that checks for files paths using a regular expression
Fixed all the setting_ entries in configure_() functions

2010-12-23
Got it working on Windows again
	Bug fixes
Changed most of the str_replace(DIRECTORY_SEPARATOR and the like
	Still need to verify the database can't be corrupted
	If get_info_() is only called by add() or another get_info_() function then add() can just use str_replace(), otherwise str_replace needs to be used in every get_info_() function

2010-12-22
Finished error logging to remote servers over SSH2
Made a lot of progress on download script
Lots of bug fixes
Added artists wrapper back in to system

2010-12-21
Worked on download_services API
	Downloaders will be able to tie in to the services, make requests, then analyze those requests later
	Download searches are stored in the database for reference and caching
Added API for specifying a function for retrieving url/title pairs from search results for each service
	Many services will use an RSS feed parser in the future
CLI now uses a static session but works from command line, permissions should be determined by the user running the script
Added a cookie jar file setting for curl, intended for use from command line, but may not be useful
Lenveshtein used in searching and pairing discogs and movie modules now doesn't store results that are too inaccurate
Music downloader pairs search results with discogs albums
	Needs to match search results of different formats
	Needs to be abstracted to support more than just an artist as a search term

2010-12-20