@@ -12,5 +12,9 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php [L,QSA]
 
+	<IfModule mod_env.c>
+		SetEnv MOD_REWRITE true
+	</IfModule>
+
 
 </IfModule>
