@@ -1,7 +1,5 @@
 <?php
 
-error_reporting(E_ALL | E_STRICT);
-
 require_once dirname(__FILE__) . DIRECTORY_SEPARATOR . 'includes' . DIRECTORY_SEPARATOR . 'bootstrap.inc';
 
 bootstrap();
