@@ -678,9 +678,9 @@ function output_encode($request)
 	), $encoder['arguments']);
 	
 	$descriptorspec = array(
-	   0 => array("pipe", "r"),  // stdin is a pipe that the child will read from
-	   1 => array("pipe", "w"),  // stdout is a pipe that the child will write to
-	   2 => array("pipe", "w"),  // stderr is a pipe that the child will write to
+	   0 => array('pipe', 'r'),  // stdin is a pipe that the child will read from
+	   1 => array('pipe', 'w'),  // stdout is a pipe that the child will write to
+	   2 => array('pipe', 'w'),  // stderr is a pipe that the child will write to
 	);
 
 	raise_error('Executing ' . $cmd, E_DEBUG);
