@@ -10,7 +10,7 @@ function theme_groove_head($title)
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title><?php print $title . ' : ' . setting('html_name'); ?></title>
 <meta name="google-site-verification" content="K3Em8a7JMI3_1ry5CNVKIHIWofDt-2C3ohovDq3N2cQ" />
-<script language="javascript" type="text/javascript" src="<?php print url('template/live/scripts'); ?>"></script>
+<script type="text/javascript" src="<?php print url('template/live/scripts'); ?>"></script>
 <link rel="stylesheet" href="<?php print url('template/live/styles'); ?>" type="text/css"/>
 </head>
 	<?php
