@@ -3,14 +3,14 @@
 function theme_live_head($title)
 {
 	?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <?php theme('redirect_block'); ?>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title><?php print $title . ' : ' . setting('html_name'); ?></title>
 <meta name="google-site-verification" content="K3Em8a7JMI3_1ry5CNVKIHIWofDt-2C3ohovDq3N2cQ" />
-<script language="javascript" type="text/javascript" src="<?php print url('templates/live/scripts'); ?>"></script>
+<script type="text/javascript" src="<?php print url('templates/live/scripts'); ?>"></script>
 <link rel="stylesheet" href="<?php print url('templates/live/styles'); ?>" type="text/css"/>
 </head>
 	<?php
@@ -36,7 +36,7 @@ function theme_live_breadcrumbs($breadcrumbs = array(), $crumb = NULL)
 {
 	?>
 	<li><a href="<?php print url('select'); ?>"><?php print setting('html_name'); ?></a></li>
-	<li><img src="<?php print url('templates/live/images/carat.gif'); ?>" class="crumbsep"></li>
+	<li><img src="<?php print url('templates/live/images/carat.gif'); ?>" class="crumbsep" alt="&gt;" /></li>
 	<?php
 	if(count($breadcrumbs) == 0)
 	{
@@ -51,7 +51,7 @@ function theme_live_breadcrumbs($breadcrumbs = array(), $crumb = NULL)
 			{
 				?>
 				<li><a href="<?php print url($path); ?>"><?php print $menu['name']; ?></a></li>
-				<li><img src="<?php print url('templates/live/images/carat.gif'); ?>" class="crumbsep"></li>
+				<li><img src="<?php print url('templates/live/images/carat.gif'); ?>" class="crumbsep" alt="&gt;" /></li>
 				<?php
 			}
 			else
@@ -113,7 +113,7 @@ function theme_live_container($title = NULL, $description = NULL)
 		?>
 		</ul>
 	</div>
-	<div id="mainColumn" class="colors_<?php print $scheme; ?>" cellpadding="0" cellspacing="0">
+	<div id="mainColumn" class="colors_<?php print $scheme; ?>">
 		<?php
 		
 		if(isset($title))
